[feature] mainpage tiles 프레임워크 적용

--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -37,6 +37,9 @@
 	color:#ffffff;
 	cursor: pointer;
 }
+.logout-btn:hover {
+	text-decoration: underline;
+}
 /********* nav 바 *************/
 .nav-bar{
 	position:relative;
