--- a/KccBrew/src/main/webapp/resources/css/comm/footer.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/footer.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 footer {
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100px;
 }
 #footer {
-	width:100vw;
+	width:100%;
     color: #ffffff;
 }
 .f-top {
@@ -15,7 +15,7 @@ footer {
     width:100%;
     height:40px;
     line-height: 40px;
-    padding: 0 210px;
+    padding: 0 205px;
 }
 .f-btn {
 	font-style: normal;
@@ -35,7 +35,7 @@ footer {
     height:60px;
     line-height:30px;
     font-size: 0.8em;
-    padding: 0 210px;
+    padding: 0 205px;
 }
 
 .f-info, .f-info2 {	
