--- a/KccBrew/src/main/webapp/resources/css/comm/mainpage.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainpage.css
@@ -121,6 +121,9 @@
 		margin-bottom:5px;
 		box-sizing:border-box;
 		flex:1;
+		display:flex;
+		flex-direction:column;
+		justify-content:space-between;
 		background-color: #4336da;
 	}
 	.inner-box {
@@ -140,7 +143,7 @@
 		cursor: pointer;
 		font-weight: normal;
 		font-size:1em;
-		margin-bottom: 5px;
+		margin-bottom: 10px;
 	}
 	.chpwd:hover, .logout:hover {
 		text-decoration: underline;
@@ -198,6 +201,7 @@
 	.tabnav {
 		font-size:0; 
 		border:1px solid #ddd;
+		border-right:none;
 		border-top:none;
 		padding:0;
 	}
