[feature] CSS 통합 및 수정

--- a/KccBrew/src/main/webapp/resources/css/comm/footer.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/footer.css
@@ -19,8 +19,8 @@ footer {
 }
 .f-btn {
 	font-style: normal;
-	background-color: #004080;
-	border: 1px solid #004080;
+	background-color: #00006f;
+	border: 1px solid #00006f;
 	font-size:0.9em;
 	padding:0 5px;
 	cursor:pointer;
