--- a/KccBrew/src/main/webapp/resources/css/schdl/myinsertform.css
+++ b/KccBrew/src/main/webapp/resources/css/schdl/myinsertform.css
@@ -1,50 +1,57 @@
 @charset "UTF-8";
 /* 모달 스타일 */
 .modal {
-  display: none; /* 모달 숨김 상태 */
-  position: fixed; /* 고정 위치 */
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0); /* 배경색 및 투명도 */
-  z-index: 1; /* 가장 위에 표시 */
-  overflow: auto; /* 내용이 넘칠 경우 스크롤 가능 */
+	display: none; /* 모달 숨김 상태 */
+	position: fixed; /* 고정 위치 */
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0); /* 배경색 및 투명도 */
+	z-index: 1; /* 가장 위에 표시 */
+	overflow: auto; /* 내용이 넘칠 경우 스크롤 가능 */
 }
 
 /* 모달 컨테이너 스타일 */
 .modal-content {
-  background-color: #fff; /* 모달 내용 배경색 */
-  margin: 15% auto; /* 모달을 수직 가운데 정렬 */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 50%; /* 모달 너비 조절 */
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* 그림자 효과 */
-  text-align: center;
+	background-color: #fff; /* 모달 내용 배경색 */
+	margin: 15% auto; /* 모달을 수직 가운데 정렬 */
+	padding: 20px;
+	border: 1px solid #888;
+	width: 50%; /* 모달 너비 조절 */
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* 그림자 효과 */
+	text-align: center;
 }
 
 /* 버튼 스타일 */
 button {
-  padding: 10px 20px;
-  margin: 10px;
-  cursor: pointer;
+	padding: 10px 20px;
+	margin: 10px;
+	cursor: pointer;
 }
 
 /* 예 버튼 스타일 */
 #confirmYes {
-  background-color: #4caf50;
-  color: white;
-  border: none;
+	background-color: #4caf50;
+	color: white;
+	border: none;
 }
 
 /* 아니오 버튼 스타일 */
 #confirmNo {
-  background-color: #f44336;
-  color: white;
-  border: none;
+	background-color: #f44336;
+	color: white;
+	border: none;
 }
 
 /* 모달 열린 상태 스타일 */
 .active {
-  display: block; /* 모달 표시 */
+	display: block; /* 모달 표시 */
+}
+
+/* 휴가신청리스트 */
+.scroll-container {
+	max-height: 300px; /* 원하는 높이 설정 */
+	overflow-y: auto; /* 세로 스크롤을 활성화합니다. */
+	border: 1px solid #ccc; /* 테두리 스타일을 설정할 수 있습니다. */
 }
