--- a/KccBrew/src/main/webapp/resources/css/asMng/content-template.css
+++ b/KccBrew/src/main/webapp/resources/css/asMng/content-template.css
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@font-face {
+	font-family: 'Noto Sans';
+	font-style: normal;
+	src: url("../../fonts/NotoSansKR-Regular.ttf")
+}
+* {
+	font-family: 'Noto Sans';
+}
 
 #fitem_id_availabilityconditionsjson .availability_grade input[type=text]
 	{
@@ -23193,10 +23201,6 @@ h6, .h6 {
 	font-size: 12px
 }
 
-p {
-	margin: 0 0 10px
-}
-
 .lead {
 	margin-bottom: 20px;
 	font-size: 16px;
@@ -26231,9 +26235,6 @@ span.visible {
 	border-radius: 4px
 }
 
-.nav-pills>li+li {
-	margin-left: 2px
-}
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus
 	{
@@ -26434,13 +26435,7 @@ span.visible {
 	border-width: 1px 0 0
 }
 
-.navbar-brand {
-	float: left;
-	height: 50px;
-	padding: 15px 15px;
-	font-size: 18px;
-	line-height: 20px
-}
+
 
 .navbar-brand:hover, .navbar-brand:focus {
 	text-decoration: none
@@ -38331,10 +38326,6 @@ img#persona_signin {
 	float: right
 }
 
-ul, ol {
-	padding: 0;
-	margin: 0 0 10px 25px
-}
 
 .container .moodleSkin
 img.mceIcon {
@@ -40424,32 +40415,7 @@ input {
 	width: 100%
 }
 
-button, input.form-submit, input[type="button"], input[type="submit"],
-	input[type="reset"] {
-	display: inline-block;
-	padding: 6px 12px;
-	margin: 0 0 3px 5px;
-	margin-bottom: 0;
-	font-size: 14px;
-	font-weight: normal;
-	line-height: 1.42857143;
-	color: #333;
-	text-align: center;
-	white-space: nowrap;
-	vertical-align: middle;
-	-ms-touch-action: manipulation;
-	touch-action: manipulation;
-	cursor: pointer;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	background-color: #fff;
-	background-image: none;
-	border: 1px solid transparent;
-	border-color: #ccc;
-	border-radius: 4px
-}
+
 
 button:focus, input.form-submit:focus, input[type="button"]:focus, input[type="submit"]:focus,
 	input[type="reset"]:focus, button:active:focus, input.form-submit:active:focus,
@@ -41317,7 +41283,7 @@ a {
 	height: auto;
 	margin-top: 5px;
 	margin-bottom: 10px;
-	font-family: 'Glyphicons Halflings';
+	font-family: 'Noto Sans', 'Glyphicons Halflings';
 	font-size: 20px;
 	font-style: normal;
 	font-weight: normal;
@@ -41605,7 +41571,7 @@ li {
 .transform-test-heading {
 	padding: 0;
 	margin: 0;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: 'Noto Sans',"Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 11px;
 	font-weight: bold;
 	line-height: 36px;
@@ -41772,7 +41738,7 @@ a#dock .dockedtitle.disabled, fieldset[disabled] a#dock
 h2 {
 	padding: 0;
 	margin: 0;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: 'Noto Sans',"Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 11px;
 	font-weight: bold;
 	line-height: 36px;
@@ -42540,7 +42506,7 @@ input {
 }
 
 html {
-	font-family: sans-serif;
+	font-family: 'Noto Sans', sans-serif;
 	-webkit-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%
 }
@@ -42641,7 +42607,7 @@ pre {
 }
 
 code, kbd, pre, samp {
-	font-family: monospace, monospace;
+	font-family: 'Noto Sans', monospace, monospace;
 	font-size: 1em
 }
 
@@ -42781,7 +42747,7 @@ td {
 }
 
 @font-face {
-	font-family: 'Glyphicons Halflings';
+	font-family: 'Noto Sans', 'Glyphicons Halflings';
 	src: url('/theme/coursemosv2/fonts/glyphicons-halflings-regular.eot');
 	src:
 		url('/theme/coursemosv2/fonts/glyphicons-halflings-regular.eot?#iefix')
@@ -42800,7 +42766,7 @@ td {
 	position: relative;
 	top: 1px;
 	display: inline-block;
-	font-family: 'Glyphicons Halflings';
+	font-family: 'Noto Sans', 'Glyphicons Halflings';
 	font-style: normal;
 	font-weight: normal;
 	line-height: 1;
@@ -43874,7 +43840,7 @@ html {
 }
 
 body {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: 'Noto Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	line-height: 1.42857143;
 	color: #333;
@@ -43882,7 +43848,7 @@ body {
 }
 
 input, button, select, textarea {
-	font-family: inherit;
+	font-family: 'Noto Sans', inherit;
 	font-size: inherit;
 	line-height: inherit
 }
@@ -43972,7 +43938,7 @@ hr {
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-	font-family: inherit;
+	font-family: 'Noto Sans', inherit;
 	font-weight: 500;
 	line-height: 1.1;
 	color: inherit
@@ -44034,9 +44000,7 @@ h6, .h6 {
 	font-size: 12px
 }
 
-p {
-	margin: 0 0 10px
-}
+
 
 .lead {
 	margin-bottom: 20px;
@@ -47002,9 +46966,6 @@ textarea.input-group-sm>.form-control, textarea.input-group-sm>.input-group-addo
 	border-radius: 4px
 }
 
-.nav-pills>li+li {
-	margin-left: 2px
-}
 
 .nav-pills>li.active>a, .nav-pills>li.active>a:hover, .nav-pills>li.active>a:focus
 	{
@@ -47205,13 +47166,7 @@ textarea.input-group-sm>.form-control, textarea.input-group-sm>.input-group-addo
 	border-width: 1px 0 0
 }
 
-.navbar-brand {
-	float: left;
-	height: 50px;
-	padding: 15px 15px;
-	font-size: 18px;
-	line-height: 20px
-}
+
 
 .navbar-brand:hover, .navbar-brand:focus {
 	text-decoration: none
@@ -50435,12 +50390,12 @@ input {
 }
 
 h1, h2, h3, h4, h5, h6, p, ul, ol, dl, input, textarea, pre {
-	font-family: 'NanumGothic', "나눔고딕", NanumGothic, '돋움', dotum, Helvetica,
+	font-family: 'Noto Sans', 'NanumGothic', "나눔고딕", NanumGothic, '돋움', dotum, Helvetica,
 		sans-serif, AppleGothic
 }
 
 select, input, button, textarea {
-	font-family: 'NanumGothic', "나눔고딕", NanumGothic, '돋움', dotum, Helvetica,
+	font-family: 'Noto Sans', 'NanumGothic', "나눔고딕", NanumGothic, '돋움', dotum, Helvetica,
 		sans-serif, AppleGothic;
 }
 
