--- a/KccBrew/src/main/webapp/resources/css/asMng/asDetail.css
+++ b/KccBrew/src/main/webapp/resources/css/asMng/asDetail.css
@@ -98,6 +98,9 @@ select[name=machineCd]{
 .form-btn:hover{
 	background-color: #E6E6E6;
 }
+.form-btn:visited{
+	color:white !important;		
+}
 #as-receipt-img{
 	height: 300px;
     background-size: contain;
@@ -119,3 +122,26 @@ select[name=machineCd]{
 	width:100%;
 	line-hieght:2;
 }	
+
+.modal{
+	display: none; /* 모달 초기에는 숨김 상태로 설정 */
+	position: fixed; /* 화면에 고정 */
+	z-index: 1; /* 다른 요소보다 위에 표시되도록 설정 */
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5); /* 반투명한 배경 색상 */
+	text-align: center;
+}
+.modal-content{
+	background-color: #fefefe;
+	margin: 10% auto; /* 모달을 수직, 수평 가운데로 위치시킴 */
+	padding: 20px;
+	border: 1px solid #888;
+	width: 30%;
+	height: 55%;
+	border-radius: 20px;
+	display: flex;
+	flex-direction: column;
+}
