--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -57,7 +57,7 @@
 	z-index:9990;
 	padding: 0 200px;
 	height: 70px;
-	background-color: rgb(247,249,250);
+	background-color: #ffffff;
 	display: flex;
 	justify-content: space-around;
 }
@@ -70,7 +70,6 @@
 	flex:0.2;
 	height:60px;
 	line-height: 60px;
-	padding-top: 0px !important;
 }
 /** 로고 이미지 **/
 .navbar-brand img{
@@ -101,13 +100,13 @@
 }
 
 .nav-item {
+	text-align:center;
 	flex:1;
 	position: relative;
 }
 
 .nav-link{
 	height:70px;
-	width:206px;
 	line-height:70px;
 	font-size:0.9em;
 	color:#111111;
