[feature] CSS 수정

--- a/KccBrew/src/main/webapp/resources/css/comm/mainLayout.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainLayout.css
@@ -1,8 +1,13 @@
 @charset "UTF-8";
+
+html {
+	overflow: overlay;
+}
 #mainContainer {
 	background-color: #eef4ff;
  	display: flex;
  	flex-direction: column;
+	overflow-y: auto;
 }
 #mainHeader {
 }
