--- a/KccBrew/src/main/webapp/resources/css/comm/mainpage.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainpage.css
@@ -31,7 +31,7 @@
 		padding: 30px 200px;
 		height:100vh;
 		flex-direction: column;
-	    background-color: rgb(247,249,250);
+	    background-color: #eef4ff;
 	}
 		
 /*************** 상단 메뉴 *************************/
