--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -4,9 +4,9 @@
 	font-style: normal;
 	src: url("../../fonts/NotoSansKR-Regular.ttf")
 }
-
 .comm-nav{
 	font-family: 'Noto Sans';
+	width:100%;
 	z-index:999;
 	font-size:1.2em;
 	height:100px;
@@ -64,7 +64,7 @@
 
 /********** 로고 *****/
 
-.navbar-brand {
+.nav-bar-brand {
 	position:relative;
 	width:260px;
 	flex:0.2;
@@ -72,7 +72,7 @@
 	line-height: 60px;
 }
 /** 로고 이미지 **/
-.navbar-brand img{
+.nav-bar-brand img{
 	position:absolute;
 	top:0;
 	left:0;
@@ -90,7 +90,7 @@
 	background-color: #ffffff;
 }
 
-.nav-pills{
+.nav-list{
 	height:70px;
 	margin:0;
 	padding:0;
@@ -106,6 +106,7 @@
 }
 
 .nav-link{
+	font-family: 'Noto Sans';
 	height:70px;
 	line-height:70px;
 	font-size:0.9em;
@@ -139,13 +140,14 @@
 
 
 /** 드롭 메뉴 **/
-.nav-pills:hover .comm-nav-dropdown{
+.nav-list:hover .comm-nav-dropdown{
 	display: block;
 	position: absolute;
 	width: 100%;
 }
 
 .comm-nav-dropdown{
+	font-family: 'Noto Sans';
 	text-align:center;
 	z-index:99999;
 	display: none;
