--- a/KccBrew/.settings/org.eclipse.wst.common.component
+++ b/KccBrew/.settings/org.eclipse.wst.common.component
@@ -11,7 +11,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         		
         <property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="kccbrew"/>
+        <property name="context-root" value="/"/>
         	
     </wb-module>
     
