feat : schedule 작성중 / 2023-09-14 이세은

--- a/KccBrew/src/main/webapp/resources/css/schdl/myschedulelist.css
+++ b/KccBrew/src/main/webapp/resources/css/schdl/myschedulelist.css
@@ -20,4 +20,202 @@
 	display: flex;
 	justify-content: center;
 }
+
+/* 탭메뉴 */
+.tabNav {
+	position: relative;
+	margin-bottom: 2rem;
+	display: table;
+	width: 100%;
+	border-top: 1px solid #eaeaea;
+	border-right: 1px solid #eaeaea;
+	border-bottom: 1px solid #eaeaea;
+}
+
+.tabNav:after {
+	display: block;
+	content: "";
+	clear: both;
+}
+
+.tabNav>li {
+	display: table-cell;
+}
+
+.tabNav a {
+	position: relative;
+	display: table;
+	width: 100%;
+	height: 2.5rem;
+	text-align: center;
+	font-size: 0.9rem;
+	color: #767676;
+	letter-spacing: -0.05em;
+	white-space: nowrap;
+	border-left: 1px solid #eaeaea;
+	transition: all .1s ease;
+	-webkit-transition: all .1s ease;
+}
+
+.tabNav a span {
+	display: table-cell;
+	width: 100%;
+	height: 100%;
+	line-height: 1.5em;
+	vertical-align: middle;
+	word-break: keep-all;
+}
+
+.tabNav a:hover, .tabNav .active a {
+	background-color: #043763;
+	color: #fff;
+	border-left: 1px solid #043763;
+}
+
+.tabNav a:hover::after, .tabNav .active a::after {
+	width: 100%;
+}
+
+.tabNav a:hover span:after, .tabNav .active a span:after {
+	position: absolute;
+	bottom: -5px;
+	left: 50%;
+	margin-left: -2px;
+	content: " ";
+	height: 0;
+	z-index: 1;
+	border-bottom: 5px solid;
+	border-left: 5px solid rgba(0, 0, 0, 0);
+	border-right: 5px solid rgba(0, 0, 0, 0);
+	color: #043763;
+	transform: rotate(-180deg);
+	-webkit-transform: rotate(-180deg);
+	-moz-transform: rotate(-180deg);
+	-o-transform: rotate(-180deg);
+	-ms-transform: rotate(-180deg);
+	transition: all .1s ease;
+	-webkit-transition: all .1s ease;
+}
+
+*+.tabNav {
+	margin-top: 2rem;
+}
+
+.tabNav.col2>li {
+	width: 50%;
+}
+
+.tabNav.col3>li {
+	width: 33.33%;
+}
+
+.tabNav.col3_etc>li {
+	width: 30%;
+}
+
+.tabNav.col3_etc>li .last {
+	width: 10%;
+}
+
+.tabNav.col4, .tabNav.col5, .tabNav.col6, .tabNav.col7, .tabNav.col8 {
+	display: block;
+}
+
+.tabNav.col4>li, .tabNav.col5>li, .tabNav.col6>li, .tabNav.col7>li,
+	.tabNav.col8>li {
+	float: left;
+	display: inline-block;
+	width: 25%;
+}
+
+.tabOuter {
+	margin-top: 2rem;
+}
+
+.tabBtn {
+	position: relative;
+	display: table;
+	width: 100%;
+}
+
+.tabBtn:before {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 1px;
+	background: #333;
+	content: "";
+}
+
+.tabBtn>li {
+	float: left;
+	display: table-cell;
+	width: 33.33%;
+}
+
+.tabBtn a {
+	position: relative;
+	display: table;
+	padding: 0 0.25rem;
+	width: 100%;
+	height: 2.7rem;
+	text-align: center;
+	color: #767676;
+	letter-spacing: -0.05em;
+	border: 1px solid #eaeaea;
+	border-bottom-color: transparent;
+	border-left-color: transparent;
+}
+
+.tabBtn>li:first-child>a {
+	border-left-color: #eaeaea;
+}
+
+.tabBtn a::after {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 0.8rem;
+	line-height: 1;
+	text-align: center;
+	font-family: "xeicon";
+	color: #4560c2;
+	content: "\e936";
+	opacity: 0;
+	visibility: hidden;
+	transition: all 0.25s ease;
+	-webkit-transition: all 0.25s ease;
+}
+
+.tabBtn a span {
+	display: table-cell;
+	width: 100%;
+	height: 100%;
+	vertical-align: middle;
+}
+
+.tabBtn a.active {
+	font-weight: 700;
+	color: #222;
+	border-color: #333;
+	border-bottom-color: #fff;
+}
+
+.tabBtn li:first-child>a.active {
+	border-left-color: #333;
+}
+
+.tabBtn a.active::after {
+	opacity: 1;
+	visibility: visible;
+}
+
+.tabConBox {
+	display: none;
+}
+
+.tabConBox.active {
+	display: block;
 }
