feat: asdetail css 수정

--- a/KccBrew/src/main/webapp/resources/css/asMng/asList.css
+++ b/KccBrew/src/main/webapp/resources/css/asMng/asList.css
@@ -4,7 +4,9 @@
 body {
 	font-family: 'Noto Sans', 'Noto Sans KR', sans-serif !important;
 }
-
+p{
+	text-align: initial !important;
+}
 /* 헤더 */
 .brand-logo {
 	width: 100%;
