--- a/KccBrew/src/main/webapp/resources/css/schdl/myschedulelist.css
+++ b/KccBrew/src/main/webapp/resources/css/schdl/myschedulelist.css
@@ -24,7 +24,8 @@
 /* 탭메뉴 */
 .tabNav {
 	position: relative;
-	margin-bottom: 2rem;
+	margin-top: 3em;
+	margin-bottom: 7em;
 	display: table;
 	width: 100%;
 	border-top: 1px solid #eaeaea;
@@ -46,9 +47,9 @@
 	position: relative;
 	display: table;
 	width: 100%;
-	height: 2.5rem;
+	height: 3rem;
 	text-align: center;
-	font-size: 0.9rem;
+	font-size: 1.3rem;
 	color: #767676;
 	letter-spacing: -0.05em;
 	white-space: nowrap;
@@ -95,10 +96,6 @@
 	-ms-transform: rotate(-180deg);
 	transition: all .1s ease;
 	-webkit-transition: all .1s ease;
-}
-
-*+.tabNav {
-	margin-top: 2rem;
 }
 
 .tabNav.col2>li {
@@ -219,3 +216,17 @@
 .tabConBox.active {
 	display: block;
 }
+
+.tab-ul {
+	list-style-type: none;
+	padding: 0px;
+	margin: 0px;
+	
+	display: flex;
+}
+
+.tab-ul > li {
+	    width: calc(100% * 1/2);
+}
+
+
