--- a/KccBrew/src/main/webapp/resources/css/comm/header.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/header.css
@@ -33,6 +33,9 @@
 }
 /****** 로그아웃 버튼 *******/
 .logout-btn {
+	font-family: 'Noto Sans';
+	width:85px;
+	font-size: 1em;
 	height:30px;
 	top:0;
 	line-height:20px;
@@ -54,8 +57,8 @@
 /********* nav 바 *************/
 .nav-bar{
 	position:relative;
-	z-index:9990;
-	padding: 0 200px;
+	padding-left: 7px;
+	padding-right: 25px;
 	height: 70px;
 	background-color: #ffffff;
 	display: flex;
@@ -66,13 +69,13 @@
 
 .nav-bar-brand {
 	position:relative;
-	width:260px;
-	flex:0.2;
+	flex:0.15;
 	height:60px;
 	line-height: 60px;
 }
 /** 로고 이미지 **/
 .nav-bar-brand img{
+	padding-left:25px;
 	position:absolute;
 	top:0;
 	left:0;
@@ -83,7 +86,7 @@
 
 /** nav 메뉴 **/
 .nav-box {
-	flex:0.8;
+	flex:0.85;
 	width:100%;
 	align-items: center;
 	width:100%;
@@ -105,7 +108,7 @@
 	position: relative;
 }
 
-.nav-link{
+.nav-links{
 	font-family: 'Noto Sans';
 	height:70px;
 	line-height:70px;
@@ -114,7 +117,6 @@
 	text-decoration: none;
 	display: block;
 	text-align: center;
-	position: relative;
 }
 
 /** nav 메뉴 밑줄 생성 **/
