--- a/KccBrew/src/main/webapp/resources/css/schdl/common.css
+++ b/KccBrew/src/main/webapp/resources/css/schdl/common.css
@@ -2,15 +2,15 @@
 
 /* CSS 코드 */
 .blind {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border: 0;
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	padding: 0;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border: 0;
 }
 
 /* 검색창 */
@@ -33,4 +33,12 @@
 	margin: 10px;
 	display: flex;
 	justify-content: center;
+}
+
+/* 주요내용 테이블 */
+#content-table {
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	align-content: space-around;
 }
