--- a/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainSideMenu.css
@@ -63,6 +63,9 @@
 		text-align: center;
 		height:30px;
 	}
+	.buttons form {
+		display: inline-block;
+	}
 	.toMyPage, .logout {
 		color:#ffffff;
 		cursor: pointer;
