--- a/KccBrew/src/main/webapp/resources/css/schdl/myschedulelist.css
+++ b/KccBrew/src/main/webapp/resources/css/schdl/myschedulelist.css
@@ -258,16 +258,38 @@
 .modal-content {
 	background-color: #fff;
 	margin: 10% auto; /* 화면 중앙에 위치 */
-	padding: 20px;
 	border: 1px solid #333;
-	width: 50%;
+	width: 20%;
+}
+
+#modalContent {
+	    margin: 10px 0;
 }
 
 /* 닫기 버튼 스타일 */
 .close {
-	color: #333;
+	color: white;
 	float: right;
 	font-size: 20px;
 	font-weight: bold;
 	cursor: pointer;
+	padding-right: 10px;
+}
+
+#modalHeader {
+    background-color: #473736;
+    width: 100%;
+    height: 2em;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 15px;
+    align-items: center;
+}
+
+#contentTitle {
+	color: white;
+}
+
+.scale-element {
+    transform-origin: top left; /* 변환 기준점 설정 */
 }
