--- a/KccBrew/src/main/webapp/resources/css/comm/mainLayout.css
+++ b/KccBrew/src/main/webapp/resources/css/comm/mainLayout.css
@@ -4,7 +4,7 @@ html {
 	overflow: overlay;
 }
 #mainContainer {
-	background-color: #eef4ff;
+	background-color: #d5e3ff;
  	display: flex;
  	flex-direction: column;
 	overflow-y: auto;
