--- a/KccBrew/.settings/org.eclipse.wst.common.component
+++ b/KccBrew/.settings/org.eclipse.wst.common.component
@@ -7,9 +7,10 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources/config"/>
         		
         <property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="kccbrew"/>
+        <property name="context-root" value="/"/>
         	
     </wb-module>
     
