--- a/KccBrew/src/main/webapp/resources/css/asMng/asDetail.css
+++ b/KccBrew/src/main/webapp/resources/css/asMng/asDetail.css
@@ -123,6 +123,18 @@ select[name=machineCd]{
 	background-color: rgba(0, 0, 0, 0.5); /* 반투명한 배경 색상 */
 	text-align: center;
 }
+.modal-rejectContent{
+	display: none; /* 모달 초기에는 숨김 상태로 설정 */
+	position: fixed; /* 화면에 고정 */
+	z-index: 1; /* 다른 요소보다 위에 표시되도록 설정 */
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5); /* 반투명한 배경 색상 */
+	text-align: center;
+	
+}
 .reject-content{
 	background-color: #fefefe;
 	margin: 10% auto; /* 모달을 수직, 수평 가운데로 위치시킴 */
