--- a/KccBrew/src/main/webapp/resources/css/schdl/myinsertform.css
+++ b/KccBrew/src/main/webapp/resources/css/schdl/myinsertform.css
@@ -55,3 +55,13 @@ button {
 	overflow-y: auto; /* 세로 스크롤을 활성화합니다. */
 	border: 1px solid #ccc; /* 테두리 스타일을 설정할 수 있습니다. */
 }
+
+#content {
+	margin: 0px auto !important;
+}
+
+.subtitle {
+	font-size: 16px; /* 원하는 크기로 조정 */
+	font-weight: bold; /* 원하는 글꼴 두껍게 설정 */
+	margin-bottom: 10px; /* 아래 여백 추가 */
+}
